; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_ctl.c_thread_tcache_flush_ctl.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_ctl.c_thread_tcache_flush_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@config_tcache = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64, i8*, i64*, i8*, i64)* @thread_tcache_flush_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thread_tcache_flush_ctl(i64* %0, i64 %1, i8* %2, i64* %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i64* %0, i64** %8, align 8
  store i64 %1, i64* %9, align 8
  store i8* %2, i8** %10, align 8
  store i64* %3, i64** %11, align 8
  store i8* %4, i8** %12, align 8
  store i64 %5, i64* %13, align 8
  %15 = load i32, i32* @config_tcache, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %6
  %18 = load i32, i32* @ENOENT, align 4
  store i32 %18, i32* %7, align 4
  br label %25

19:                                               ; preds = %6
  %20 = call i32 (...) @READONLY()
  %21 = call i32 (...) @WRITEONLY()
  %22 = call i32 (...) @tcache_flush()
  store i32 0, i32* %14, align 4
  br label %23

23:                                               ; preds = %19
  %24 = load i32, i32* %14, align 4
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %23, %17
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @READONLY(...) #1

declare dso_local i32 @WRITEONLY(...) #1

declare dso_local i32 @tcache_flush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
